--- a/projects/admin/src/app/components/media/media.component.html
+++ b/projects/admin/src/app/components/media/media.component.html
@@ -1,5 +1,5 @@
 <h2>Media Folders</h2>
-<div *ngIf="activeFolder">
+<div *ngIf="activatedFolder">
   <input type="file" class="file-input" (change)="uploadFile($event)" #fileUpload />
 
   <div class="file-upload">
