--- a/projects/admin/src/app/components/media-details/media-details.component.html
+++ b/projects/admin/src/app/components/media-details/media-details.component.html
@@ -1,4 +1,4 @@
-<input type="file" style="display: none" #fileInput (change)="handleFileInput($event)" />
+<input type="file" style="display: none" #fileInput (change)="handleFileInput()" />
 <mat-dialog-content> What event would you need to do? </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-raised-button color="primary" (click)="confirmReplace()">Replace</button>
