--- a/projects/admin/src/styles.scss
+++ b/projects/admin/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./styles/theme.scss";
+@import "./styles/variables.scss";
 @import "../../../styles/grid";
 
 * {
