--- a/projects/admin/src/app/login/login.component.html
+++ b/projects/admin/src/app/login/login.component.html
@@ -28,7 +28,7 @@
 
       <mat-error *ngIf="loginStatus">wrong user name or password</mat-error>
       <div>
-        <mat-checkbox (change)="rememberPassword()">Remember me</mat-checkbox>
+        <mat-checkbox (change)="remember($event.checked)" [formControl]="rememberMe">Remember me</mat-checkbox>
       </div>
 
       <div>
