--- a/projects/admin/src/app/components/media/media.component.scss
+++ b/projects/admin/src/app/components/media/media.component.scss
@@ -25,3 +25,13 @@
   display: flex;
   align-items: center;
 }
+
+button {
+  margin: 8px;
+}
+
+.display-folder {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
