--- a/projects/admin/src/app/components/media-details/media-details.component.html
+++ b/projects/admin/src/app/components/media-details/media-details.component.html
@@ -1,10 +1,10 @@
 <h2 mat-dialog-title>Add Folder</h2>
 <div mat-dialog-content>
   <mat-form-field>
-    <input matInput [(ngModel)]="data.folderName" placeholder="Folder Name" />
+    <input matInput [(ngModel)]="data" placeholder="Folder Name" />
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onCancelClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="data.folderName">Add</button>
+  <button mat-button [mat-dialog-close]="data">Add</button>
 </div>
