--- a/projects/admin/src/app/shared/components/data-table/filter-data-table/filter-data-table.component.html
+++ b/projects/admin/src/app/shared/components/data-table/filter-data-table/filter-data-table.component.html
@@ -3,9 +3,13 @@
     <mat-icon>search</mat-icon>
     <span class="filter-field">Search</span>
   </button>
-  <button mat-fab color="primary" class="square-button" (click)="toggleFilterList()">
+
+  <button mat-flat-button class="square-button" color="primary" (click)="toggleFilterList()">
     <mat-icon>filter_list</mat-icon>
-    <p class="filter-text filter-field">Filters</p>
+    <span class="filter-field">Filters</span>
+  </button>
+  <button mat-icon-button color="primary" (click)="addFilter(); toggleAndAddFilter()">
+    <mat-icon>add</mat-icon>
   </button>
 
   <mat-chip-row *ngFor="let filter of filters.value; let i = index">
@@ -22,7 +26,7 @@
       <mat-form-field>
         <mat-label>field</mat-label>
         <mat-select [formControl]="filter.controls.field" required>
-          <mat-option *ngFor="let property in schema.properties" [value]="property.key">
+          <mat-option *ngFor="let property; in: schema.properties" [value]="property.key">
             {{ property.key }}
           </mat-option>
         </mat-select>
@@ -51,7 +55,6 @@
         <button mat-icon-button color="warn" (click)="removeFilter(idx)">
           <mat-icon>remove</mat-icon>
         </button>
-
         <button mat-icon-button color="primary" (click)="addFilter()" *ngIf="idx === filters.controls.length - 1">
           <mat-icon>add</mat-icon>
         </button>
@@ -59,6 +62,3 @@
     </div>
   </ng-container>
 </div>
-<button mat-icon-button color="primary" (click)="addFilter()" *ngIf="!isFilterListOpen">
-  <mat-icon>add</mat-icon>
-</button>
