--- a/projects/admin/src/app/shared/components/dynamic-form/dynamic-form.component.scss
+++ b/projects/admin/src/app/shared/components/dynamic-form/dynamic-form.component.scss
@@ -2,17 +2,11 @@ button {
   margin: 6px;
 }
 
-.mat-card-ed {
-  width: 25%;
-}
-.card-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 50vh;
-}
-
 .padded-field {
   padding: 8px 16px;
-  width: 300px;
+}
+
+:host {
+  padding: 1rem;
+  display: block;
 }
