--- a/projects/admin/src/models/hooks/user/roles-form/roles-form.component.html
+++ b/projects/admin/src/models/hooks/user/roles-form/roles-form.component.html
@@ -1,6 +1,6 @@
-<mat-form-field [formControl]="formControl">
+<mat-form-field>
   <mat-label i18n>roles</mat-label>
-  <mat-select multiple>
+  <mat-select [formControl]="formControl" multiple>
     @for (option of options; track option) {
       <mat-option [value]="option">{{ option }}</mat-option>
     }
