--- a/projects/admin/src/models/hooks/user/roles-form/roles-form.component.html
+++ b/projects/admin/src/models/hooks/user/roles-form/roles-form.component.html
@@ -2,7 +2,7 @@
   <mat-label i18n>roles</mat-label>
   <mat-select [formControl]="formControl" multiple>
     @for (option of options; track option) {
-      <mat-option [value]="option">{{ option }}</mat-option>
+      <mat-option [value]="option">{{ translations[option] }}</mat-option>
     }
   </mat-select>
 </mat-form-field>
