--- a/projects/admin/src/app/components/user-profile/user-profile.component.html
+++ b/projects/admin/src/app/components/user-profile/user-profile.component.html
@@ -1,31 +1,31 @@
 <div class="card-container">
   <mat-card class="mat-card-ed">
     <mat-card-content>
-      <form>
-        <h2>User Profile</h2>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-          <mat-label>Name</mat-label>
-          <input type="text" matInput placeholder="Edit Your Name" required />
+      <form formGroupName="form">
+        <h2 i18n>User Profile</h2>
+        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+          <mat-label i18n>name</mat-label>
+          <input formControlName="name" type="text" matInput placeholder="Edit Your Name" required />
         </mat-form-field>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-          <mat-label>Phone</mat-label>
-          <input type="text" matInput placeholder="Edit Your Phone" />
+        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+          <mat-label i18n>password</mat-label>
+          <input formControlName="password" type="text" matInput placeholder="Edit Your Password" />
         </mat-form-field>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-          <mat-label>Password </mat-label>
-          <input type="text" matInput placeholder="Edit Your Password" />
+        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+          <mat-label formControlName="phone" i18n>phone</mat-label>
+          <input name="phone" type="text" matInput placeholder="Edit Your Phone" />
         </mat-form-field>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-          <mat-label>Languages</mat-label>
-          <mat-select [formControl]="languages">
+        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+          <mat-label i18n>language</mat-label>
+          <mat-select formControlName="languages">
             <mat-option *ngFor="let language of languagesList" [value]="language">{{ language }}</mat-option>
           </mat-select>
         </mat-form-field>
       </form>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary">Submit</button>
-      <button mat-raised-button color="warn">Cancel</button>
+      <button mat-raised-button color="primary" i18n (click)="save()">save</button>
+      <button mat-raised-button color="warn" i18n>cancel</button>
     </mat-card-actions>
   </mat-card>
 </div>
