--- a/projects/admin/src/app/components/user-profile/user-profile.component.html
+++ b/projects/admin/src/app/components/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
   <mat-card class="mat-card-ed">
     <mat-card-content>
       <form [formGroup]="form">
-        <h2 i18n>User Profile</h2>
+        <h2 i18n>Edit User Profile</h2>
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
           <mat-label i18n>name</mat-label>
           <input formControlName="name" type="text" matInput placeholder="Edit Your Name" required />
@@ -10,6 +10,14 @@
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
           <mat-label i18n>password</mat-label>
           <input formControlName="password" type="text" matInput placeholder="Edit Your Password" />
+          <mat-error *ngIf="form.get('password')?.hasError('minlength')">
+            Password should be at least 8 characters
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+          <mat-label i18n>password</mat-label>
+          <input formControlName="confirmpassword" type="text" matInput placeholder="Confirm Your Password" required />
+          <mat-error *ngIf="form.errors?.['passwordmatcherror']"> Passwords do not match </mat-error>
         </mat-form-field>
 
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
@@ -21,7 +29,7 @@
       </form>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" i18n (click)="save()">save</button>
+      <button mat-raised-button color="primary" i18n (click)="save()">confirm</button>
       <button mat-raised-button color="warn" i18n>cancel</button>
     </mat-card-actions>
   </mat-card>
