finish the edit profile

--- a/projects/admin/src/app/components/user-profile/user-profile.component.html
+++ b/projects/admin/src/app/components/user-profile/user-profile.component.html
@@ -10,14 +10,23 @@
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
           <mat-label i18n>password</mat-label>
           <input formControlName="password" type="text" matInput placeholder="Edit Your Password" />
-          <mat-error *ngIf="form.get('password')?.hasError('minlength')">
-            Password should be at least 8 characters
+          <mat-error *ngIf="form.controls.password.hasError('minlength')" i18n>
+            Password should be at least 6 characters
           </mat-error>
         </mat-form-field>
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
           <mat-label i18n>password</mat-label>
-          <input formControlName="confirmpassword" type="text" matInput placeholder="Confirm Your Password" required />
-          <mat-error *ngIf="form.errors?.['passwordmatcherror']"> Passwords do not match </mat-error>
+          <input
+            formControlName="confirmpassword"
+            type="text"
+            matInput
+            placeholder="Confirm Your Password"
+            i18n-placeholder="Confirm Your Password"
+            required
+          />
+          <mat-error *ngIf="form.controls.confirmpassword.hasError('passwordmatcherror')" i18n
+            >Passwords do not match</mat-error
+          >
         </mat-form-field>
 
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
@@ -29,7 +38,7 @@
       </form>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" i18n (click)="save()">confirm</button>
+      <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="save()" i18n>confirm</button>
       <button mat-raised-button color="warn" i18n>cancel</button>
     </mat-card-actions>
   </mat-card>
