feat: edit profile (#56)

--- a/projects/admin/src/app/components/user-profile/user-profile.component.html
+++ b/projects/admin/src/app/components/user-profile/user-profile.component.html
@@ -1,31 +1,45 @@
 <div class="card-container">
   <mat-card class="mat-card-ed">
     <mat-card-content>
-      <form>
-        <h2>User Profile</h2>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-          <mat-label>Name</mat-label>
-          <input type="text" matInput placeholder="Edit Your Name" required />
+      <form [formGroup]="form">
+        <h2 i18n>Edit User Profile</h2>
+        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+          <mat-label i18n>name</mat-label>
+          <input formControlName="name" type="text" matInput placeholder="Edit Your Name" required />
         </mat-form-field>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-          <mat-label>Phone</mat-label>
-          <input type="text" matInput placeholder="Edit Your Phone" />
+        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+          <mat-label i18n>password</mat-label>
+          <input formControlName="password" type="text" matInput placeholder="Edit Your Password" />
+          <mat-error *ngIf="form.controls.password.hasError('minlength')" i18n>
+            Password should be at least 6 characters
+          </mat-error>
         </mat-form-field>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-          <mat-label>Password </mat-label>
-          <input type="text" matInput placeholder="Edit Your Password" />
+        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+          <mat-label i18n>password</mat-label>
+          <input
+            formControlName="confirmpassword"
+            type="text"
+            matInput
+            placeholder="Confirm Your Password"
+            i18n-placeholder="Confirm Your Password"
+            required
+          />
+          <mat-error *ngIf="form.controls.confirmpassword.hasError('passwordmatcherror')" i18n
+            >Passwords do not match</mat-error
+          >
         </mat-form-field>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-          <mat-label>Languages</mat-label>
-          <mat-select [formControl]="languages">
-            <mat-option *ngFor="let language of languagesList" [value]="language">{{ language }}</mat-option>
+
+        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+          <mat-label i18n>language</mat-label>
+          <mat-select formControlName="language">
+            <mat-option *ngFor="let language of languages" [value]="language">{{ translations[language] }}</mat-option>
           </mat-select>
         </mat-form-field>
       </form>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary">Submit</button>
-      <button mat-raised-button color="warn">Cancel</button>
+      <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="save()" i18n>confirm</button>
+      <button mat-raised-button color="warn" i18n>cancel</button>
     </mat-card-actions>
   </mat-card>
 </div>
