--- a/projects/admin/src/app/shared/components/dynamic-fields/dynamic-fields.component.html
+++ b/projects/admin/src/app/shared/components/dynamic-fields/dynamic-fields.component.html
@@ -95,7 +95,8 @@
                     </mat-expansion-panel-header>
                     <app-dynamic-fields
                       [entityName]="propInfo.value.propInformation.basic.type"
-                      formControlName="{{ i }}"
+                      [formControl]="formControl"
+                      (valueChanges)="formArrayValueChanges($event, i, propInfo.value.propInformation.basic.name)"
                     />
                   </mat-expansion-panel>
                 }
